--- a/NavigationAula/Base.lproj/Main.storyboard
+++ b/NavigationAula/Base.lproj/Main.storyboard
@@ -406,7 +406,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QGb-04-6np">
-                                                    <rect key="frame" x="6" y="5" width="166" height="89.5"/>
+                                                    <rect key="frame" x="6" y="5" width="166" height="90"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4NC-sm-Z13">
                                                     <rect key="frame" x="185" y="13" width="160" height="24"/>
@@ -424,7 +424,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zSl-y1-hpq">
-                                                    <rect key="frame" x="186.5" y="73.5" width="144.5" height="2"/>
+                                                    <rect key="frame" x="186.5" y="74" width="144.5" height="2"/>
                                                     <color key="tintColor" red="0.29803921570000003" green="0.1058823529" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 </progressView>
                                             </subviews>
@@ -606,6 +606,7 @@
                         <segue destination="sun-sg-MpZ" kind="relationship" relationship="viewControllers" id="jzO-99-ziB"/>
                         <segue destination="4bN-a6-sh2" kind="relationship" relationship="viewControllers" id="vcn-Ni-eX8"/>
                         <segue destination="76I-dL-bI7" kind="relationship" relationship="viewControllers" id="qNg-0l-duU"/>
+                        <segue destination="ELn-NA-rrs" kind="relationship" relationship="viewControllers" id="gng-ea-kUY"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ReB-FS-vFD" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -648,6 +649,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OVX-1f-zMt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2973" y="190"/>
+        </scene>
+        <!--Presenciais-->
+        <scene sceneID="nOH-Wj-tZr">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="Presenciais" storyboardName="Presenciais" referencedIdentifier="Presenciais" id="ELn-NA-rrs" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="JTF-Pd-90n"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="p0w-AW-SHB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4235" y="197"/>
         </scene>
     </scenes>
     <resources>
